--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
 <!--     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
-    </ion-nav-bar> aa-->
+    </ion-nav-bar>asa aaasdad-->
     <ion-nav-view></ion-nav-view>
 
     <!-- build:js({client,node_modules}) app/vendor.js -->
