--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
       <script src="bower_components/ionic/release/js/ionic-angular.js"></script>
       <script src="bower_components/ionic-filter-bar/dist/ionic.filter.bar.js"></script>
       <script src="bower_components/ionic-scroller/src/ionic-scroller.min.js"></script>
+      <script src="bower_components/angular-resource/angular-resource.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -53,6 +54,7 @@
           <script src="app/alarm/alarm.controller.js"></script>
           <script src="app/alarm/alarm.js"></script>
           <script src="app/directive/addAnimates/addAnimates.directive.js"></script>
+          <script src="app/directive/errSrc/errSrc.directive.js"></script>
           <script src="app/directive/hideTabs/hideTabs.directive.js"></script>
           <script src="app/directive/mclear/mclear.directive.js"></script>
           <script src="app/item/item.controller.js"></script>
